# finlab

./: README.md  pyproject.toml
.github/: git-commit-instructions.md
api/: main.py
api/config/: prompts.py
api/models/: agent.py
api/routers/: agent.py  rag.py
api/services/: agent.py  rag.py  search.py  ticker_extractor.py
evaluations/: level-1-unit-tests.py  level-2-integration-tests.py  level-3-human-annotation.py  level-4-llm-as-judge.py
guardrails/: guardrails-demo-1.py  guardrails-demo-2.py  guardrails-demo-3.py
ingestion/: create_collection.py  create_indexes.py  ingestion.py  news_ingestion.py
ingestion/utils/: edgar_client.py  news_client.py  semantic_chunker.py
